[gd_scene load_steps=2 format=3 uid="uid://chronicle_panel_001"]

[ext_resource type="Script" path="res://WebOfFate/ui/chronicle_panel.gd" id="1_chronicle"]

[node name="ChroniclePanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -280.0
offset_right = 350.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chronicle")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ChronicleTitle" type="Label" parent="MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "THE CHRONICLE"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="SummaryScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5

[node name="SummaryText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ContentContainer/SummaryScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "The chronicle of your adventure will appear here..."
fit_content = true

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2

[node name="StatsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/ContentContainer/StatsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="StatsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer/StatsPanel/StatsMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StatsTitle" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/StatsPanel/StatsMargin/StatsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "STATISTICS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ContentContainer/StatsPanel/StatsMargin/StatsVBox"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer/StatsPanel/StatsMargin/StatsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "CONTINUE"
